[project]
name = "turismo-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Felix Alcantara",email = "felixalcanatara632@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "mysql-connector-python (>=9.7.0,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
